--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Last name: Pascalau</p>
 </h2>
     <h4>Summary: <p>Highly motivated engineer designer for building services,
-        considering a general purpose - as constant improvments over effiency and sustenabilty.
+        considering a general purpose - as constant improvments over effiency and sustenabilty.<br/>
          With recent desire to combine fields
         of knowledge over tech solutions, in ascending to become a Fullstack developer.
         Looking for a challenging position as an entry to this field.
